--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ ul {
 }
 img {
   display: block;
-  /* max-width: 100%; */
   width: 100%;
   height: auto;
 }
@@ -117,6 +116,7 @@ img {
   padding-top: 96px;
   padding-bottom: 96px;
 }
+
 /**-----Header-----**/
 .header {
   padding-top: 24px;
@@ -329,6 +329,7 @@ img {
   border-radius: 4px;
   border: none;
 }
+
 /* ------ Section-two ------ */
 .visually-hidden {
   position: absolute;
@@ -353,7 +354,7 @@ img {
   width: 100%;
 }
 .features-icon {
-    display: none;
+  display: none;
 }
 .section-two-list-title {
   margin-bottom: 8px;
@@ -369,6 +370,7 @@ img {
   letter-spacing: 0.02em;
 
 }
+
 /* ------ Section-About------ */
 .section.about {
   padding-top: 0;
@@ -401,15 +403,18 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-  /* width: calc((100% - 72px) / 4); */
   width: 100%;
   background-color: #ffffff;
+}
+.team-container {
+  width: 264px;
 }
 
 .team-list-title-text {
   text-align: center;
   padding: 32px 16px;
   margin: 0 auto;
+
 }
 .team-list-title {
   margin-bottom: 8px;
@@ -450,12 +455,13 @@ img {
   justify-content: center;
   column-gap: 16px;
   row-gap: 72px;
-
 }
+
 .customers-list-item {
     width: calc((100% - 16px)/2);
     
 }
+
 .customers-list-link {
   background-color: inherit;
   display: flex;
@@ -466,10 +472,12 @@ img {
   height: 88px;
   transition: border var(--transition);
 }
+
 .customers-icon {
     fill:#AFB1B8;
     transition: fill var(--transition);
 }
+
 .customers-list-link:hover,
 .customers-list-link:focus {
     border: 1px solid var(--color-ocean);
@@ -487,133 +495,137 @@ img {
 }
 .footer-container {
     display: flex;
-    flex-wrap: wrap;
-    gap: 72px;
-    justify-content: center;
-    text-align: center;
-    margin: 0 auto;
 }
 .logo-studio-footer {
   color: var(--color-cloud);
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
 .footer.logo {
   display: inline-block;
-  margin-bottom: 16px;
 }
-.logo-footer-container {
-  width: 264px;
-}
+
 .footer-text {
   font-size: 16px;
   letter-spacing: 0.02em;
   color: var(--color-cornflower);
   text-align: left;
+  width: 264px;
 }
 
 .soc-title {
-    font-weight: 500;
-    color: #ffffff;
-    margin-bottom: 16px;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #ffffff;
+  margin-bottom: 16px;
+  letter-spacing: 0.02em;
 }
+
 .footer-soc-list {
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-  }
-  .footer-soc-list-item {
-    width: 40px;
-    height: 40px;
-  }
-
-  .footer-soc-link {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: var(--color-iris);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color var(--transition);
-  }
- .soc-icon{
-    fill: #FFFFFF;
-  } 
-  
-  .footer-soc-link:hover,
-  .footer-soc-link:focus {
-      background-color: var(--color-green);
-  }
-
-  .subscribe {
-    width: 100%;
-  }
-  .subscribe-title {
-    font-weight: 500;
-    color: #ffffff;
-    margin-bottom: 16px;
-    letter-spacing: 0.02em;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
 }
+
+.footer-soc-list-item {
+  width: 40px;
+  height: 40px;
+}
+
+.soc-footer-container {
+  margin-right: 80px;
+}
+
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--color-iris);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color var(--transition);
+}
+.soc-icon{
+  fill: #FFFFFF;
+} 
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+    background-color: var(--color-green);
+}
+
+.subscribe {
+  width: 100%;
+}
+
+.subscribe-title {
+  font-weight: 500;
+  color: #ffffff;
+  margin-bottom: 16px;
+  letter-spacing: 0.02em;
+}
+
 .subscribe-label {
   width: 100%;
 }
-  .subscribe-form {
-    display: flex;
+
+.subscribe-form {
+  display: flex;
   align-items: center;    
   justify-content: center;
-    gap: 16px;
-    width: 100%;
-    flex-direction: column;
+  gap: 24px;
+  width: 100%;
+  flex-direction: column;
 }
-  .subscribe-input {
-    padding-top: 8px;
-    padding-left: 16px;
-    padding-bottom: 8px;
-    width: 100%;
-    height: 40px;
-    line-height: 2;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    background-color: transparent;
-    border: 1px solid #ffffff;
-    opacity: 0.3;
-    border-radius: 4px;
-    transition: border-color var(--transition);
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-  }
+.subscribe-input {
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-bottom: 8px;
+  width: 100%;
+  height: 40px;
+  line-height: 2;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  opacity: 0.3;
+  border-radius: 4px;
+  transition: border-color var(--transition);
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
 
-  .subscribe-input::placeholder {
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-  }
+.subscribe-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
 
-  .subscribe-input:focus {
-    outline: none;
-    border-color: var(--color-iris);
-  }
+.subscribe-input:focus {
+  outline: none;
+  border-color: var(--color-iris);
+}
 
-  .subscribe-button {
-    padding: 8px 24px 8px 24px;
-    height: 40px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 16px;
-  }
+.subscribe-button {
+  padding: 8px 24px 8px 24px;
+  height: 40px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
 
-  .subscribe-button-icon {
-    right: 24px;
-    width: 24px;
-    height: 24px;
-    top: 50%;
-    fill: #ffffff;
-  }
+.subscribe-button-icon {
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  top: 50%;
+  fill: #ffffff;
+}
 
 
 /*---------Portfolio---------- !*/
@@ -629,7 +641,6 @@ img {
 .projects-list-item {
   width: calc((100% - 48px)/3);
   background: #ffffff;
-  
 }
 .projects-link {
   display: block;
@@ -882,7 +893,7 @@ img {
   border-color: var(--color-ocean);
 }
 
-
+/* ----Media---- */
 @media screen and (min-width: 428px) {
   .container {
     max-width: 428px;
@@ -894,165 +905,174 @@ img {
   .container {
     max-width: 768px;
   }
+
   .mobile-nav {
     display: none;
   }
+
   .header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header-list {
-  display: flex;
-  gap: 40px;
-}
-.header-nav {
-  display: flex;
-  align-items: center;
-  margin-right: auto;
-}
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header-list {
+    display: flex;
+    gap: 40px;
+  }
+  .header-nav {
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+  }
   .header-nav {
     display: flex;
     align-items: center;
     margin-right: 0;
   }
 
-.address-list {
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-}
+  .address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
 .header {
   padding-bottom: 12px;
 }
-    .header-item-link {
-      position: relative;
-      padding-top: 28px;
-      padding-bottom: 28px;
-      font-weight: 500;
-      font-size: 16px;
-      letter-spacing: 0.02em;
-      color: var(--color-grey);
-      transition: color var(--transition);
-    }
+.header-item-link {
+  position: relative;
+  padding-top: 28px;
+  padding-bottom: 28px;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  color: var(--color-grey);
+  transition: color var(--transition);
+}
   
-    .header-item-link:hover,
-    .header-item-link:focus {
-      color: var(--color-ocean);
-    }
-  
-    .header-item-link::after {
-      position: absolute;
-      content: '';
-      left: 0;
-      bottom: 0px;
-      width: 100%;
-      height: 4px;
-      background-color: var(--color-ocean);
-      border-radius: 2px;
-      opacity: 0;
-      transition: opacity var(--transition);
-    }
-  
-    .header-item-link:hover::after,
-    .header-item-link:focus::after,
-    .header-item-link.current::after {
-      opacity: 1;
-    }
-  
-    .header-item-link.current {
-      color: var(--color-ocean);
-    }
-  
-    .contact {
-        font-size: 12px;
-          line-height: 1.17;
-      letter-spacing: 0.02em;
-      color: var(--color-slate);
-      transition: color var(--transition);
-    }
-  
-    .header-address {
-      font-style: normal;
-    }
-  
-    .contact:hover,
-    .contact:focus {
-      color: var(--color-ocean);
-    }
+.header-item-link:hover,
+.header-item-link:focus {
+  color: var(--color-ocean);
+}
 
-  .caption {
-    font-size: 56px;
-    line-height: 1.07;
-    max-width: 500px;
-    margin-bottom: 36px;
-  }
-  .section-two-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 72px 24px;
-  }
-  .section-two-item {
-    width: calc((100% - 24px) / 2);
-  }
-  .section-two-list-title {
-    text-align: left;
-  }
-  
-  .team-list {
-    column-gap: 24px;
-    row-gap: 64px;
-   }
-  
-  .team-list-item {
-    width: calc((100% - 24px) / 2);
-  }
+.header-item-link::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-ocean);
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity var(--transition);
+}
 
-  .customers-list {
-    column-gap: 24px;
-  }
-      
-  .customers-list-item {
-    width: calc((100% - 24px * 2)/3);
+.header-item-link:hover::after,
+.header-item-link:focus::after,
+.header-item-link.current::after {
+  opacity: 1;
+}
 
-  }
+.header-item-link.current {
+  color: var(--color-ocean);
+}
 
-/* .container {
-  width: 582px;
-} */
-  .footer-container {
-    justify-content: start;
-    text-align: left;
+.contact {
+    font-size: 12px;
+      line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--color-slate);
+  transition: color var(--transition);
+}
+
+.header-address {
+  font-style: normal;
+}
+
+.contact:hover,
+.contact:focus {
+  color: var(--color-ocean);
+}
+
+.caption {
+  font-size: 56px;
+  line-height: 1.07;
+  max-width: 500px;
+  margin-bottom: 36px;
+}
+.section-two-list {
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 72px 24px;
+}
+.section-two-item {
+  width: calc((100% - 24px) / 2);
+}
+.section-two-list-title {
+  text-align: left;
+}
+
+.team-container {
+  width: 552px;
+}
+
+.team-list {
+  column-gap: 24px;
+  row-gap: 64px;
+}
+
+.team-list-item {
+  width: calc((100% - 24px) / 2);
+}
+.customers-container {
+  width: 552px;
+}
+.customers-list {
+  column-gap: 24px;
+}
     
-  }
-
-  .subscribe-label {
-    width: 264px;
-  }
-  .subscribe-form {
-    align-items: left;    
-    justify-content: start;
-  }
+.customers-list-item {
+  width: calc((100% - 24px * 2)/3);
+}
 
 
-  .subscribe-form {
-    flex-direction: row;
-  }
+.footer-container {
+  justify-content: start;
+  text-align: left;
+  width: 552px;
+}
+
+.subscribe-label {
+  width: 264px;
+}
+.subscribe-form {
+  align-items: left;    
+  justify-content: start;
+}
+
+
+.subscribe-form {
+  flex-direction: row;
+}
 
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1158px;
   }  
-    .mobile-menu-container {
-      display: none;
-    }
-        .mobile-nav {
-          display: none;
-        }
-  .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
+  
+  .mobile-menu-container {
+    display: none;
   }
+  
+  .mobile-nav {
+    display: none;
+  }
+  
+  .section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 
   .hero {
     max-width: 1440px;
@@ -1090,14 +1110,18 @@ img {
     margin-bottom: 8px;
     background-color: var(--color-cloud);
   }  
-
+  .team-container {
+    width: 1128px;
+  }
   .team-list {
     width: 100%;
   }
   .team-list-item {
     width: calc((100% - 72px) / 4);
   }
-
+  .customers-container {
+    width: 1128px;
+  }
   .customers-list {
     gap: 24px;
     width: 100%;
@@ -1106,9 +1130,11 @@ img {
   .customers-list-item {
     width: calc((100% - 120px)/6);
   }
-.footer-container {
-    display: flex;
-}
+
+  .logo-footer-container {
+    margin-right: 120px;
+  }
+
 .subscribe-form {
   display: flex;
   gap: 24px;
@@ -1123,59 +1149,67 @@ img {
 }
 .address-list {
   display: flex;
+  flex-direction: row;
   gap: 40px;
 }
-  .header-item-link {
-      position: relative;
-      padding-top: 28px;
-      padding-bottom: 28px;
-      font-weight: 500;
-      font-size: 16px;
-      letter-spacing: 0.02em;
-      color: var(--color-grey);
-      transition: color var(--transition);
-    }
+.logo-studio-header {
+  margin-right: 76px;
+}
+.header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.header-item-link {
+    position: relative;
+    padding-top: 28px;
+    padding-bottom: 28px;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    color: var(--color-grey);
+    transition: color var(--transition);
+  }
+
+.header-item-link:hover,
+.header-item-link:focus {
+  color: var(--color-ocean);
+}
   
-    .header-item-link:hover,
-    .header-item-link:focus {
-      color: var(--color-ocean);
-    }
-  
-    .header-item-link::after {
-      position: absolute;
-      content: '';
-      left: 0;
-      bottom: 0px;
-      width: 100%;
-      height: 4px;
-      background-color: var(--color-ocean);
-      border-radius: 2px;
-      opacity: 0;
-      transition: opacity var(--transition);
-    }
-  
-    .header-item-link:hover::after,
-    .header-item-link:focus::after,
-    .header-item-link.current::after {
-      opacity: 1;
-    }
-  
-    .header-item-link.current {
-      color: var(--color-ocean);
-    }
-  
-    .contact {
-      font-size: 16px;
-    }
-  
-    .header-address {
-      font-style: normal;
-    }
-  
-    .contact:hover,
-    .contact:focus {
-      color: var(--color-ocean);
-    }
+.header-item-link::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-ocean);
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity var(--transition);
+}
+
+.header-item-link:hover::after,
+.header-item-link:focus::after,
+.header-item-link.current::after {
+  opacity: 1;
+}
+
+.header-item-link.current {
+  color: var(--color-ocean);
+}
+
+.contact {
+  font-size: 16px;
+}
+
+.header-address {
+  font-style: normal;
+}
+
+.contact:hover,
+.contact:focus {
+  color: var(--color-ocean);
+}
 }
 
 }
@@ -1184,5 +1218,27 @@ img {
   .about {
     display: none;
   }
+  .footer-container {
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    margin: 0 auto;
+}
+
+  .soc-footer-container {
+    margin-right: 0;
+  }
+
+}
+
+@media screen and (max-width: 767px) {
+  .about {
+    display: none;
+  }
+
+  .footer-container {
+    gap: 72px;
+    justify-content: center;
+    text-align: center;
+}
 }
 
