--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,7 @@ img {
   height: 100%;
   background-color: #FFFFFF;
   overflow-y: scroll;
+  z-index: 999;
   transform: translateX(100%);
   transition: transform var(--transition);
 }
